2007-10-20  Vlad Seryakov  <seryakov@users.sf.net>

    	* include/ns.h:
	* nsd/nswin32.c:
    	* nsd/unix.c: Added 2 new public API functions Ns_SetPriveleges and Ns_GetPriveleges
      	which are resolve and assign user uid/gid

    	* nsproxy/nsproxylib.c:
    	* nsd/nsmain.c: Switched to use new function that assign user real uid/gid

    	* nsd/tclmisc.c: New Tcl command ns_setpriveleges that sets real uid and gid

	* doc/src/ns_setpriveleges.man: Added documentation file

2007-10-19  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/fastpath.c: Added flag O_LARGEFILE to NsFastOpen to support very big files
	* include/ns.h:
	* nsd/config.c: Aded new public function for supporting Tcl_WideInt values:
	Ns_ConfigWideInt, Ns_ConfigWideIntRange. This is only for C API currently,
	for Tcl it needs to be evaluated how to do it
	* nsd/str.c: New public function Ns_StrToWideInt

2007-10-19  Stephen Deasey  <sdeasey@users.sf.net>

	* configure.in: Disable file access through the Tcl VFS for the fastpath
	by default for make benefit glorious naive static file benchmark
	performance.

	* nsd/driver.c: Mark driver shut down if none configured. Fixes unclean
	shutdown in non-server situations when no drivers are configured
	listening.

2007-10-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/mimetypes.c: Added mime type for .pac files as  application/x-ns-proxy-autoconfig

2007-10-15  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tcljob.c: Fixed returning error-related information to the
	user of [ns_job wait] command. Internally, the errorCode/errorInfo
	are processed only of the passed script returned with TCL_ERROR code.

2007-10-14  Stephen Deasey  <sdeasey@gmail.com>

	* include/ns.h: Add missing declaration for Ns_StopServer().
	* nsd/nsd.h: Add missing 'void' to function declaration.
	* nsd/adpparse.c: Quieten a compiler warning about int/char truncation.
	* nsd/binder.c: The file mode for unix domain sockets was being parsed