@@ -1,3 +1,14 @@
+2007-10-21  Vlad Seryakov  <seryakov@users.sf.net>
+
+    	* include/ns.h:
+    	* nsproxy/nsproxylib.c:
+	* nsd/nsmain.c:
+    	* nsd/unix.c: New public API functions Ns_SetUser/Ns_SetGroup instead of 
+	deleted Ns_SetPriveleges. New Tcl commands ns_setuser/ns_setgroup instead of
+	ns_setpriveleges
+
+	* nsd/nswin32.c: No need for extra stubs
+
 2007-10-20  Vlad Seryakov  <seryakov@users.sf.net>
 
     	* include/ns.h:
